deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld
spec:
  minReadySeconds: 5
  replicas: 3
  selector:
    matchLabels:
      app: helloworld
  template:
    metadata:
      labels:
        app: helloworld
    spec:
      containers:    
      - name: application
        image: fabricemicoli/oneit:k8
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 3000
        livenessProbe:
          initialDelaySeconds: 1
          periodSeconds: 1
          httpGet:
            path: /health
            port: 3000
