ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: helloworld
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: helloworld
          servicePort: 80
        path: /
